--- a/dl4j-examples/pom.xml
+++ b/dl4j-examples/pom.xml
@@ -21,17 +21,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.deeplearning4j</groupId>                                       
-    <artifactId>dl4j-examples</artifactId>                         
-    <version>1.0.0-beta7</version>                                              
-    <name>Introduction to DL4J</name>                                     
-    <description>A set of examples introducing the DL4J framework</description>   
+    <groupId>org.deeplearning4j</groupId>
+    <artifactId>dl4j-examples</artifactId>
+    <version>1.0.0-beta7</version>
+    <name>Introduction to DL4J</name>
+    <description>A set of examples introducing the DL4J framework</description>
 
     <properties>
         <dl4j-master.version>1.0.0-beta7</dl4j-master.version>
         <!-- Change the nd4j.backend property to nd4j-cuda-X-platform to use CUDA GPUs -->
-        <!-- <nd4j.backend>nd4j-cuda-10.2-platform</nd4j.backend> -->           
-        <nd4j.backend>nd4j-native</nd4j.backend>
+        <!-- <nd4j.backend>nd4j-cuda-10.2-platform</nd4j.backend> -->
+<!--        <nd4j.backend>nd4j-native</nd4j.backend>-->
+        <nd4j.backend>nd4j-cuda-10.2</nd4j.backend>
         <java.version>1.8</java.version>
         <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
         <maven.minimum.version>3.3.1</maven.minimum.version>
@@ -56,8 +57,19 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-                                                                                
+
     <dependencies>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-cuda-10.2</artifactId>
+            <version>${dl4j-master.version}</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.bytedeco</groupId>-->
+<!--            <artifactId>cuda-platform-redist</artifactId>-->
+<!--            <version>10.2-7.6-1.5.3</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>${nd4j.backend}</artifactId>
@@ -140,26 +152,26 @@
     <!-- Maven Enforcer: Ensures user has an up to date version of Maven before building -->
     <build>
         <plugins>
-            <plugin>                                                            
-                <artifactId>maven-enforcer-plugin</artifactId>                  
-                <version>1.0.1</version>                                        
-                <executions>                                                    
-                    <execution>                                                 
-                        <id>enforce-default</id>                                
-                        <goals>                                                 
-                            <goal>enforce</goal>                                
-                        </goals>                                                
-                        <configuration>                                         
-                            <rules>                                             
-                                <requireMavenVersion>                           
+            <plugin>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>1.0.1</version>
+                <executions>
+                    <execution>
+                        <id>enforce-default</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
                                     <version>[${maven.minimum.version},)</version>
                                     <message>********** Minimum Maven Version is ${maven.minimum.version}. Please upgrade Maven before continuing (run "mvn --version" to check). **********</message>
-                                </requireMavenVersion>                          
-                            </rules>                                            
-                        </configuration>                                        
-                    </execution>                                                
-                </executions>                                                   
-            </plugin>  
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -169,30 +181,30 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
-            <plugin>                                                            
-                <groupId>com.lewisd</groupId>                                   
-                <artifactId>lint-maven-plugin</artifactId>                      
-                <version>0.0.11</version>                                       
-                <configuration>                                                 
-                    <failOnViolation>true</failOnViolation>                     
-                    <onlyRunRules>                                              
-                        <rule>DuplicateDep</rule>                               
-                        <rule>RedundantPluginVersion</rule>                     
-                        <!-- Rules incompatible with Java 9                     
-                        <rule>VersionProp</rule>                                
-                        <rule>DotVersionProperty</rule> -->                     
-                    </onlyRunRules>                                             
-                </configuration>                                                
-                <executions>                                                    
-                    <execution>                                                 
-                        <id>pom-lint</id>                                       
-                        <phase>validate</phase>                                 
-                        <goals>                                                 
-                            <goal>check</goal>                                  
-                        </goals>                                                
-                    </execution>                                                
-                </executions>                                                   
-            </plugin> 
+            <plugin>
+                <groupId>com.lewisd</groupId>
+                <artifactId>lint-maven-plugin</artifactId>
+                <version>0.0.11</version>
+                <configuration>
+                    <failOnViolation>true</failOnViolation>
+                    <onlyRunRules>
+                        <rule>DuplicateDep</rule>
+                        <rule>RedundantPluginVersion</rule>
+                        <!-- Rules incompatible with Java 9
+                        <rule>VersionProp</rule>
+                        <rule>DotVersionProperty</rule> -->
+                    </onlyRunRules>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>pom-lint</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -257,33 +269,33 @@
                 </configuration>
             </plugin>
         </plugins>
-        <pluginManagement>                                                      
-            <plugins>                                                           
-                <plugin>                                                        
-                    <groupId>org.eclipse.m2e</groupId>                          
-                    <artifactId>lifecycle-mapping</artifactId>                  
-                    <version>1.0.0</version>                                    
-                    <configuration>                                             
-                        <lifecycleMappingMetadata>                              
-                            <pluginExecutions>                                  
-                                <pluginExecution>                               
-                                    <pluginExecutionFilter>                     
-                                        <groupId>com.lewisd</groupId>           
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>com.lewisd</groupId>
                                         <artifactId>lint-maven-plugin</artifactId>
-                                        <versionRange>[0.0.11,)</versionRange>  
-                                        <goals>                                 
-                                            <goal>check</goal>                  
-                                        </goals>                                
-                                    </pluginExecutionFilter>                    
-                                    <action>                                    
-                                        <ignore/>                               
-                                    </action>                                   
-                                </pluginExecution>                              
-                            </pluginExecutions>                                 
-                        </lifecycleMappingMetadata>                             
-                    </configuration>                                            
-                </plugin>                                                       
-            </plugins>                                                          
-        </pluginManagement>   
+                                        <versionRange>[0.0.11,)</versionRange>
+                                        <goals>
+                                            <goal>check</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore/>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
